--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Baby-🥰🍒",
+    "BOTNAME": " JANU 😛💓",
     "PREFIX": ".",
     "ADMINBOT": [
-        "100029990749091"
+        "100053047930142"
     ],
     "NDH": [
         "100029990749091"
