--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": " JANU 😛💓",
+    "BOTNAME": "HABIBI🫣😛",
     "PREFIX": ".",
     "ADMINBOT": [
         "100053047930142"
