--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "HABIBI🫣😛"
+    "BOTNAME": "HABIBI"
     "PREFIX": ".",
     "ADMINBOT": [
         "100053047930142"
@@ -234,4 +234,4 @@
         "autoUnsend": true,
         "delayUnsend": 20
     }
-}
+
