--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "HABIBI"
+    "BOTNAME": "HABIBI",
     "PREFIX": ".",
     "ADMINBOT": [
         "100053047930142"
